# crewai-learning

pr7/: pyproject.toml
pr7/src/pr7/: main.py  main1.py  main2.py
