[project]
name = "pr7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdul Samad", email = "132301326+samade747@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.100.1",
    
]

[project.scripts]
pr7 = "pr7:main"
samad = "pr7.main:kickoff"
chain_prompt = "pr7.main:kickoff

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
